--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@apollo/client": "^3.8.6",
+    "@fortawesome/fontawesome-free": "^6.4.2",
+    "@fortawesome/free-brands-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "graphql": "^16.8.1",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
