--- a/server/package.json
+++ b/server/package.json
@@ -10,8 +10,10 @@
   "license": "MIT",
   "dependencies": {
     "@apollo/server": "^4.9.4",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "graphql": "^16.8.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.3"
   }
 }
