--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "@apollo/server": "^4.9.4",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "graphql": "^16.8.1",
