--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,8 @@
     "@fortawesome/fontawesome-free": "^6.4.2",
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@uploadcare/react-widget": "^2.4.5",
+    "axios": "^1.6.0",
     "framer-motion": "^10.16.4",
     "graphql": "^16.8.1",
     "jwt-decode": "^3.1.2",
