--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dotenv": "^0.1.3",
     "react-router-dom": "^6.17.0",
     "react-square-web-payments-sdk": "^3.2.1"
   },
