--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm run dev\"",
     "install": "cd server && npm i && cd ../client && npm i",
     "seed": "cd server && npm run seed",
-    "build": "cd client && npm run build && react-dotenv"
+    "build": "react-dotenv && cd client && npm run build"
   },
   "author": "",
   "license": "ISC",
@@ -18,7 +18,9 @@
   "dependencies": {
     "react-dotenv": "^0.1.3"
   },
-    "react-dotenv": {
-    "whitelist": ["UC_KEY"]
-}
+  "react-dotenv": {
+    "whitelist": [
+      "UC_KEY"
+    ]
+  }
 }
