--- a/client/package.json
+++ b/client/package.json
@@ -38,5 +38,10 @@
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.3",
     "vite": "^4.4.5"
+  },
+  "react-dotenv": {
+    "whitelist": [
+      "UC_KEY"
+    ]
   }
 }
