--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "develop": "concurrently \"cd server && npm run watch\" \"cd client && react-dotenv && npm run dev\"",
     "install": "cd server && npm i && cd ../client && npm i",
     "seed": "cd server && npm run seed",
-    "build": "cd client && react-dotenv && npm run build"
+    "build": "cd client && npm run build && react-dotenv"
   },
   "author": "",
   "license": "ISC",
