--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "",
   "main": "server/server.js",
   "scripts": {
-    "start": "react-dotenv && server/server.js",
-    "develop": "concurrently \"cd server && npm run watch\" \"cd client && react-dotenv && npm run dev\"",
+    "start": "server/server.js",
+    "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm run dev\"",
     "install": "cd server && npm i && cd ../client && npm i",
     "seed": "cd server && npm run seed",
-    "build": "cd client && npm run build && react-dotenv"
+    "build": "cd client && npm run build"
   },
   "author": "",
   "license": "ISC",
