--- a/client/package.json
+++ b/client/package.json
@@ -24,7 +24,9 @@
     "react-dom": "^18.2.0",
     "react-dotenv": "^0.1.3",
     "react-router-dom": "^6.17.0",
-    "react-square-web-payments-sdk": "^3.2.1"
+    "react-square-web-payments-sdk": "^3.2.1",
+    "react-tsparticles": "^2.12.2",
+    "tsparticles-slim": "^2.12.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
